# voidm

./: .bedrock_agentcore.yaml  .gitignore  BENCHMARKS.md  Cargo.toml  Cargo.toml.debug  LICENSE  PHASE2_CYPHER_ARCHITECTURE.md  QUERY_EXPANSION_RESEARCH.md  README.md  config-test.toml  config.example.toml  onnx_debug.rs  onnx_debug_runner.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.spark_utils/backlog/: 20260316_voidm_trajectory_informed_learning_layer.md  20260317_voidm_live_runtime_ingestion.md  20260320_voidm_remove_mcp_server.md  20260323_voidm_sandbox-db-path-fix.md  20260324_voidm_fix-reembed-shadow-table-cleanup.md  20260324_voidm_single-memory-db-path.md  20260403_voidm_agent_ux_improvements.md  20260406_voidm_option_a_voidm2_port.md  20260408_voidm_search-recall-upgrade.md
.spark_utils/ideas_and_assumptions/: QMD.md  deep-research-report-embeddings-models.md  models_used.md  neo4j_feature.md
.spark_utils/issues/: 20260324_merge_platform_into_codex.py
.spark_utils/todo/: 20260316_voidm_trajectory_informed_learning_layer.md  20260317_voidm_live_runtime_ingestion.md  20260320_voidm_remove_mcp_server.md  20260323_voidm_sandbox-db-path-fix.md  20260324_voidm_fix-reembed-shadow-table-cleanup.md  20260324_voidm_single-memory-db-path.md  20260403_voidm_agent_ux_improvements.md  20260406_voidm_option_a_voidm2_port.md  20260408_voidm_search-recall-upgrade.md
crates/voidm-cli/: Cargo.toml
crates/voidm-cli/src/: cli_config.rs  instructions.rs  lib.rs  main.rs  output.rs
crates/voidm-cli/src/commands/: add.rs  batch_add.rs  config.rs  conflicts.rs  delete.rs  export.rs  get.rs  graph.rs  info.rs  init.rs  instructions.rs  learn.rs  link.rs  list.rs  mem_update.rs  migrate.rs  mod.rs  models.rs  ontology.rs  recall.rs  scopes.rs  search.rs  stale.rs  stats.rs  unlink.rs  update.rs  why.rs
crates/voidm-cli/tests/: config_hierarchy.rs
crates/voidm-core/: Cargo.toml
crates/voidm-core/src/: auto_tagger.rs  chunking.rs  config.rs  config_loader.rs  crud.rs  embeddings.rs  gguf_query_expander.rs  graph_retrieval.rs  learning.rs  lib.rs  migrate.rs  migration.rs  models.rs  ner.rs  nli.rs  ontology.rs  passage.rs  quality.rs  query_expansion.rs  redactor.rs  reranker.rs  rrf_fusion.rs  search.rs  semantic_dedup.rs  tag_linker.rs  vector.rs
crates/voidm-core/src/db/: mod.rs  neo4j.rs  sqlite.rs  tests.rs
crates/voidm-core/src/query/: cypher.rs  mod.rs  postgres.rs  sqlite.rs  translator.rs
crates/voidm-core/tests/: graph_retrieval_integration.rs  query_expansion_benchmark.rs  reranker_batch_benchmark.rs  rrf_search_benchmark.rs  semantic_dedup_benchmark.rs  semantic_dedup_twopass_benchmark.rs
crates/voidm-graph/: Cargo.toml
crates/voidm-graph/src/: lib.rs  ops.rs  traverse.rs
crates/voidm-graph/src/cypher/: ast.rs  lexer.rs  mod.rs  parser.rs  translator.rs
docs/: NEO4J_DESIGN.md  TRAJECTORY_LEARNING_LAYER.md  architecture.md  cli.md  concepts.md  configuration.md  development.md  index.md
