[package]
name = "voidm-graph"
version = "0.8.0"
edition = "2021"
description = "Graph layer (EAV schema, Cypher translator) for voidm"
license = "MIT"
repository = "https://github.com/autonomous-toaster/voidm"
keywords = ["graph", "cypher", "sqlite", "memory", "llm"]
categories = ["database"]

[dependencies]
sqlx             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
